// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SheetList.Item /> should render with a link 1`] = `
<Item
  className={null}
  image={null}
  isDisabled={false}
  isSelected={false}
  link="url/to/somewhere"
  linkState={null}
  onClick={null}
  rightComponent={null}
  testId={null}
  title="My Title"
>
  <Glow
    className={null}
    color="#f7f7f7"
    styles={
      Object {
        "hover": Object {
          "boxShadow": "-20px 0 0 #f7f7f7, 20px 0 0 #f7f7f7",
        },
      }
    }
  >
    <div
      className="css-13azwyo"
      onClick={[Function]}
    >
      <div
        className="css-1bmd5dz"
        style={Object {}}
      />
      <Link
        href="url/to/somewhere"
        onClick={null}
        state={null}
      >
        <div />
      </Link>
    </div>
  </Glow>
</Item>
`;

exports[`<SheetList.Item /> should render with a right component 1`] = `
<Item
  className={null}
  image={null}
  isDisabled={false}
  isSelected={false}
  link={null}
  linkState={null}
  onClick={null}
  rightComponent={
    <span>
      I\`m a span.
    </span>
  }
  testId={null}
  title="My Title"
>
  <div
    data-test-id={null}
  >
    <Grid
      className="css-1qcr7hz"
      component="div"
      wrap={false}
    >
      <div
        className="css-1qcr7hz css-h7r55a"
      >
        <GridItem
          className="css-rx1nvy"
          component="div"
          grow={1}
          shrink={1}
        >
          <div
            className="css-rx1nvy css-1gs0ko2"
          >
            My Title
          </div>
        </GridItem>
        <GridItem
          className=""
          component="div"
          grow={1}
          shrink={1}
        >
          <div
            className=" css-1gs0ko2"
          >
            <span>
              I\`m a span.
            </span>
          </div>
        </GridItem>
      </div>
    </Grid>
  </div>
</Item>
`;

exports[`<SheetList.Item /> should render with a title but no image 1`] = `
<Item
  className={null}
  image={null}
  isDisabled={false}
  isSelected={false}
  link={null}
  linkState={null}
  onClick={null}
  rightComponent={null}
  testId={null}
  title="My Title"
>
  <div
    data-test-id={null}
  >
    <Grid
      className="css-1qcr7hz"
      component="div"
      wrap={false}
    >
      <div
        className="css-1qcr7hz css-h7r55a"
      >
        <GridItem
          className="css-rx1nvy"
          component="div"
          grow={1}
          shrink={1}
        >
          <div
            className="css-rx1nvy css-1gs0ko2"
          >
            My Title
          </div>
        </GridItem>
      </div>
    </Grid>
  </div>
</Item>
`;

exports[`<SheetList.Item /> should render with an image 1`] = `
<Item
  className={null}
  image={
    <img
      alt="Alternative text"
      src="url/to/image"
    />
  }
  isDisabled={false}
  isSelected={false}
  link={null}
  linkState={null}
  onClick={null}
  rightComponent={null}
  testId={null}
  title="My Title"
>
  <div
    data-test-id={null}
  >
    <Grid
      className="css-1qcr7hz"
      component="div"
      wrap={false}
    >
      <div
        className="css-1qcr7hz css-h7r55a"
      >
        <div
          className="css-1mhrjzj"
        >
          <img
            alt="Alternative text"
            src="url/to/image"
          />
        </div>
        <GridItem
          className="css-rx1nvy"
          component="div"
          grow={1}
          shrink={1}
        >
          <div
            className="css-rx1nvy css-1gs0ko2"
          >
            My Title
          </div>
        </GridItem>
      </div>
    </Grid>
  </div>
</Item>
`;

exports[`<SheetList.Item /> should render with an onClick element 1`] = `
<Item
  className={null}
  image={null}
  isDisabled={false}
  isSelected={false}
  link={null}
  linkState={null}
  onClick={[Function]}
  rightComponent={null}
  testId={null}
  title="My Title"
>
  <div
    data-test-id={null}
    onClick={[Function]}
    onKeyPress={[Function]}
    role="link"
    tabIndex="0"
  >
    <Glow
      className={null}
      color="#f7f7f7"
      styles={
        Object {
          "hover": Object {
            "boxShadow": "-20px 0 0 #f7f7f7, 20px 0 0 #f7f7f7",
          },
        }
      }
    >
      <div
        className="css-13azwyo"
        onClick={[Function]}
      >
        <div
          className="css-1bmd5dz"
          style={Object {}}
        />
        <div
          data-test-id={null}
        >
          <Grid
            className="css-1qcr7hz"
            component="div"
            wrap={false}
          >
            <div
              className="css-1qcr7hz css-h7r55a"
            >
              <GridItem
                className="css-rx1nvy"
                component="div"
                grow={1}
                shrink={1}
              >
                <div
                  className="css-rx1nvy css-1gs0ko2"
                >
                  My Title
                </div>
              </GridItem>
            </div>
          </Grid>
        </div>
      </div>
    </Glow>
  </div>
</Item>
`;

exports[`<SheetList.Item /> should render without a Glow when disabled 1`] = `
<Item
  className={null}
  image={null}
  isDisabled={true}
  isSelected={false}
  link={null}
  linkState={null}
  onClick={null}
  rightComponent={null}
  testId={null}
  title="My Title"
>
  <div
    data-test-id={null}
  >
    <Grid
      className="css-1qcr7hz"
      component="div"
      wrap={false}
    >
      <div
        className="css-1qcr7hz css-h7r55a"
      >
        <GridItem
          className="css-rx1nvy css-19uk9mv"
          component="div"
          grow={1}
          shrink={1}
        >
          <div
            className="css-rx1nvy css-19uk9mv css-1gs0ko2"
          >
            My Title
          </div>
        </GridItem>
      </div>
    </Grid>
  </div>
</Item>
`;

exports[`<SheetList.Item /> should render without a Glow when selected 1`] = `
<Item
  className={null}
  image={null}
  isDisabled={false}
  isSelected={true}
  link={null}
  linkState={null}
  onClick={null}
  rightComponent={null}
  testId={null}
  title="My Title"
>
  <div
    data-test-id={null}
  >
    <Grid
      className="css-1qcr7hz css-7q9yf9"
      component="div"
      wrap={false}
    >
      <div
        className="css-1qcr7hz css-7q9yf9 css-h7r55a"
      >
        <GridItem
          className="css-rx1nvy"
          component="div"
          grow={1}
          shrink={1}
        >
          <div
            className="css-rx1nvy css-1gs0ko2"
          >
            My Title
          </div>
        </GridItem>
      </div>
    </Grid>
  </div>
</Item>
`;
